# rooster

./: README.md  main.py  output.txt  requirements.txt  setup.cfg  test.py  usage.md
.github/workflows/: main.py  main.yml
config/: config.json
src/rooster/: VERSION  __init__.py  __main__.py  channels.py  downloader.py  main.py  parser.py  shows.py
test/: test_main.py
